# Logan_ballbot_wallpush

./: .gitignore  Project.toml  just_for_test_wall_pushing_more_general.ipynb  wall_pushing.ipynb  wall_pushing_more_general.ipynb  wall_pushing_more_general_reduced.ipynb
.ipynb_checkpoints/: wall_pushing-checkpoint.ipynb  wall_pushing_more_general-checkpoint.ipynb
ballbot_arm_description/: CMakeLists.txt  package.xml
ballbot_arm_description/launch/: ballbot_urdf.launch.py
ballbot_arm_description/meshes/: link_forearm_r_ascii.stl
