<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ballbot_arm_description</name>
  <version>1.0.0</version>
  <description>Ballbot URDF</description>
  <maintainer email="haorux@andrew.cmu.edu">Haoru Xue</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  
  <depend>joint_state_publisher</depend>
  <depend>xacro</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_state_publisher_gui</depend>

  <exec_depend>rosbag2_storage_mcap</exec_depend>
  <exec_depend>rviz_imu_plugin</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
